# Shiba

./: .gitignore  CMakeLists.txt
resource/shader/: normal_fragment_shader.glsl  normal_vertex_shader.glsl
source/: Application.cpp  Application.h  Color.h  SFMLMain.cpp  SFMLMain.h  launcher.cpp  launcher.h  main.cpp
source/common/: ShibaTypes.h
source/framework/: GLWindow.cpp  GLWindow.h  ShibaOpenGL.cpp  ShibaOpenGL.h
source/framework/graphic/shader/: ShaderProgram.cpp  ShaderProgram.h
source/framework/math/: math.h  matrix.h
source/framework/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
source/framework/model/loader/: ModelLoader.h
source/graphics/gl/: GLGraphicsRenderer.cpp  GLGraphicsRenderer.h
source/gui/window/: GuiWindow.cpp  GuiWindow.h  INativeWindow.h
source/native/: ShibaNative.h
source/native/sfml/: SFMLApplication.cpp  SFMLApplication.h  SFMLController.cpp  SFMLController.h
source/native/sfml/service/: SfmlEventService.cpp  SfmlEventService.h  SfmlLogService.h
source/platform/: ShibaNative.h
source/platform/sfml/: SFMLApplication.cpp  SFMLApplication.h  SFMLController.cpp  SFMLController.h
source/platform/sfml/service/: SfmlEventService.cpp  SfmlEventService.h  SfmlLogService.cpp  SfmlLogService.h
source/utils/: FileUtil.cpp  FileUtil.h  Interface.h  List.h  Singleton.h
source/window/: GuiWindow.cpp  GuiWindow.h  WindowEvent.h
